# datalad-osf-1

./: .gitignore  .travis.yml  Makefile  README.md  setup.cfg  setup.py
datalad_osf/: __init__.py
