[metadata]
url = https://github.com/adswa/datalad-osf-1
author = Adina Wagner
author_email = adina.wagner@t-online.de
description = DataLad support for the Open Science Framework
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: Apache License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >= 3.5
install_requires =
    datalad >= 0.12.2
test_requires =
    nose
    coverage
packages = find:
include_package_data = True

[versioneer]
VCS = git
style = pep440
versionfile_source = datalad_osf/_version.py
versionfile_build = datalad_osf/_version.py
tag_prefix =
parentdir_prefix =

[coverage:report]
show_missing = True
omit =
    # versioneer code
    datalad_osf/_version.py
